# PlaySegmentation-AAAI2025

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
play_segmentation/data/babyai/: README.md  env.py  generate.py  statistics.py  utils.py
play_segmentation/data/babyai/config/: gen_data.yaml
play_segmentation/data/babyai/scripts/: create_datasets.sh
play_segmentation/data/calvin/: README.md  convert.py
play_segmentation/data/calvin/configs/: convert.yaml
play_segmentation/data/calvin/scripts/: convert.sh  download.sh
play_segmentation/labelling/labelling/: README.md  label_gt.py  label_ps.py  label_random.py  label_tridet.py  label_unloc.py  merge.py  utils.py
play_segmentation/labelling/labelling/configs/: labelling_gt_babyai.yaml  labelling_gt_calvin.yaml  labelling_ps_babyai.yaml  labelling_ps_calvin.yaml  labelling_random_babyai.yaml  labelling_random_calvin.yaml  labelling_tridet_babyai.yaml  labelling_tridet_calvin.yaml  labelling_unloc_babyai.yaml  labelling_unloc_calvin.yaml  merge_ps_calvin.yaml
play_segmentation/labelling/labelling_training/: README.md  data.py  model.py  postprocess.py  train.py  trainer.py
play_segmentation/labelling/labelling_training/configs/: babyai.yaml  calvin.yaml  postprocess_babyai.yaml  postprocess_calvin.yaml
play_segmentation/policy/: README.md  data.py  eval.py  imitation.py  mcil.py  model.py  trainer.py
play_segmentation/policy/configs/: imitation_babyai.yaml  mcil_calvin.yaml
play_segmentation/segmentation_models/: README.md  data.py  train.py
play_segmentation/segmentation_models/configs/: ps_confidence_calvin.yaml  train_ps_babyai.yaml  train_ps_calvin.yaml  train_tridet_babyai.yaml  train_tridet_calvin.yaml  train_unloc_babyai.yaml  train_unloc_calvin.yaml  tridet_confidence_calvin.yaml
play_segmentation/segmentation_models/play_segment/: confidence.py  data.py  model.py  trainer.py
play_segmentation/segmentation_models/tridet/: confidence.py  data.py  model.py  trainer.py
play_segmentation/segmentation_models/unLoc/: data.py  model.py  trainer.py
play_segmentation/utils/: data.py  nn.py  util.py
